Authentication fixes, small login/register UI update, input fields now ignore whitespace

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -13,7 +13,6 @@ body{
 }
 
 h1{
-    margin-top: -2%;
     font-family: "Fredoka", sans-serif;
     color: white;
     text-align: center;
@@ -101,6 +100,7 @@ h2{
 }
 
 input{
+    text-indent: 4%;
     font-size: 35px;
     color: #363636;
     border: 3px solid #444444;
@@ -113,11 +113,11 @@ input{
 .loginform{
     
     text-align: center;
-    position: absolute;
+    margin-top: 3.5%;
+    position: relative;
     font-size: 25px;
-    top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
 }
 
 .button {
@@ -143,7 +143,7 @@ input{
 .button:focus { 
   background-color: #1376da;
   color: #ffffff;
-  cursor: pointer;
+  cursor: pointer; 
 }
 
 .button:active {
@@ -155,46 +155,12 @@ input{
 }
 
 .register:hover,
-.register:focus { 
-  background-color: rgb(108, 221, 79);
+.register:focus,
+.register:active { 
+  background-color: rgb(78, 179, 53);
   color: #ffffff;
   cursor: pointer;
 }
-
-.register:active {
-  background: rgb(98, 226, 66);
-}
-
-.logoutbutton{
-    z-index: 2;
-    left: 88%;
-    padding-bottom: 25px;
-    text-align: middle;
-    position: relative;
-    width: 200px;
-    background-color: transparent;
-    border: 0;
-    border-radius: 100px;
-    font-size: 20px;
-    color: white;
-    margin-bottom: 0%;
-    margin-top: 0%;
-}
-
-.logoutbutton:hover,
-.logoutbutton:focus{ 
-  cursor: pointer;
-}
-
-.logoutbutton:hover h2,
-.logoutbutton:focus h2{ 
-  color: #ffeb94;
-}
-
-.logoutbutton:active h2{
-  color: #ffeb94;
-  cursor: pointer;
-} 
 
 /* from stackoverflow */
 .noselect {
@@ -207,3 +173,17 @@ input{
                                     supported by Chrome, Edge, Opera and Firefox */
   }
 
+.link{
+    text-align: center;
+    position: relative;
+    font-size: 20px;
+    font-family: 'Sniglet', cursive;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    margin-top: 1%;
+}
+
+a:visited { 
+    text-decoration: none; 
+    color: #363636; 
+   }
